--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,14 @@
     <string name="phone">Phone:</string>
     <string name="note">Note</string>
     <string name="choose_your_delivery_method">Choose your delivery method:</string>
+    <string name="contact">Contact</string>
+    <string name="order">Order</string>
+    <string name="status">Status</string>
+    <string name="favorites">Favorites</string>
+    <string name="action_order_message">You selected Order.</string>
+    <string name="action_status_message">You selected Status.</string>
+    <string name="action_favorites_message">You selected Favorites.</string>
+    <string name="action_contact_message">You selected Contact.</string>
     <string-array name="labels_array">
         <item>Home</item>
         <item>Work</item>
